--- a/coin-tracker-web/package.json
+++ b/coin-tracker-web/package.json
@@ -16,7 +16,9 @@
     "@types/react-dom": "^18.2.19",
     "axios": "^1.6.7",
     "highcharts": "^10.3.3",
+    "highcharts-more": "^0.1.7",
     "highcharts-react-official": "^3.2.0",
+    "highcharts-stock": "^0.1.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
